data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1165.wast
;; 6. **Test Description**:     Create a loop structure where `br_table` targets labels that are conditionally updated, with indices potentially out-of-bounds after execution path changes.     - **Constraint**: Validates branch target resolution as labels dynamically change due to control flow.     - **Edge Case**: Verifies runtime dynamic index adaptability in `br_table` resolution.

(assert_invalid
  (module
    (func $dynamic_br_table
      (local i32)
      (block $exit
        (loop $loop_label
          (block $inner
            (br_table $inner $exit $loop_label (local.get 0))
          )
          (local.set 0 (local.get 0))
          (br $loop_label)
        )
      )
    )
  )
  "br_table index out of bounds"
)